@@ -1,5 +1,5 @@
 runit 1.4.0
-Sat, 04 Mar 2006 14:26:26 +0000
+Sat, 04 Mar 2006 17:10:50 +0000
   * doc/faq.html: new.
   * doc/benefits.html: use sv program instead of runsvstat, runsvctrl;
     minor.
@@ -16,7 +16,9 @@ Sat, 04 Mar 2006 14:26:26 +0000
     remove; obsolete.
   * doc/index.html: add faq; remove runsvctrl, runsvstat, svwaitdown,
     svwaitup.
-  * sv.c: fix usage output.
+  * sv: fix usage output.
+  * chpst: new option -d, limit data segment per process; don't use nested
+    functions.
 
 runit 1.3.3
 Mon, 02 Jan 2006 20:35:34 +0000
